objects/File__c.object
<CustomObject>
    <description>Object to hold information about individual files received as part of vendor relationships between members and third party vendors such as TPAs and PBMs.</description>
    <fields>
        <fullName>Current_Processing_Status__c</fullName>
        <label>Current Processing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Vendor Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected - Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected - Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Date_Acknowledged__c</fullName>
        <label>File Date: Acknowledged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>File_Date_Available_in_App__c</fullName>
        <label>File Date: Available in App</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Date_Data_Summary__c</fullName>
        <label>File Date: Data Summary</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>File_Date_Expected_In_Application__c</fullName>
        <label>File Date: Expected In Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Date_Received__c</fullName>
        <label>File Date: Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>File_Date_Submitted__c</fullName>
        <label>File Date: Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>File_Effective_End_Date__c</fullName>
        <label>File Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Effective_Start_Date__c</fullName>
        <label>File Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Month__c</fullName>
        <formula>Month( File_Effective_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Notes__c</fullName>
        <label>File Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Received_Name__c</fullName>
        <label>File Received Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Short_Description__c</fullName>
        <label>File Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Submitted_Name__c</fullName>
        <label>File Submitted Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Transmission_Type__c</fullName>
        <label>File Transmission Type</label>
        <picklist>
            <picklistValues>
                <fullName>ABCO SFTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encrypted CD-ROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor SFTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verisk SFTP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Production_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Production Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_of_Initial_Site_Build__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part of Initial Site Build</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Relationship</label>
        <referenceTo>Vendor_Relationship__c</referenceTo>
        <relationshipLabel>Files</relationshipLabel>
        <relationshipName>Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>File</label>
    <nameField>
        <displayFormat>File {0000000}</displayFormat>
        <label>File Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>